Archive2/f0/297021962316f7/output
main.cpp:2:5: error: 'perf_data' does not name a type
     perf_data performance(F const & f, int calls){
     ^
